Søk - fjernet "Read {post}

--- a/search/index.html
+++ b/search/index.html
@@ -26,7 +26,7 @@ search_omit: true
     <div>
       <h2><a href="##Url##">##Title##</a></h2>
       <p><a href="##Url##">##Date##</a><br />
-      <a href="##Url##">Read &ldquo;##Title##&rdquo;</a></p>
+      <!-- <a href="##Url##">Read &ldquo;##Title##&rdquo;</a> --></p>
     </div>
   </script>
 
